force-app/main/default/objects/FieloEE__RedemptionRule__c/FieloEE__RedemptionRule__c.object-meta.xml
<CustomObject>
    <description>Arbitrary groups to which members can belong. You can create segments by age, by location, etc.</description>
    <label>Segment</label>
    <nameField>
        <label>Segment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Segment</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>