force-app/main/default/objects/FieloEE__RedemptionRule__c/fields/FieloEE__Description__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__Description__c</fullName>
    <description>A description for this segment.</description>
    <inlineHelpText>Enter a description for this segment.</inlineHelpText>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>