force-app/main/default/objects/FieloEE__RedemptionRule__c/fields/FieloEE__isActive__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__isActive__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Checking this option will make this segment active.</description>
    <inlineHelpText>Check this option in order to activate this segment.</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>