force-app/main/default/objects/FieloEE__RedemptionRule__c/fields/FieloEE__Order__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__Order__c</fullName>
    <label>Order</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>