force-app/main/default/objects/FieloEE__RedemptionRule__c/recordTypes/FieloEE__Dynamic.recordType-meta.xml
<RecordType>
    <fullName>FieloEE__Dynamic</fullName>
    <active>true</active>
    <description>Once you define the criteria of the segment, when the member performs an operation the system calculates online the member’s segment.</description>
    <label>Dynamic</label>
</RecordType>