force-app/main/default/objects/FieloEE__RedemptionRule__c/recordTypes/FieloEE__Manual.recordType-meta.xml
<RecordType>
    <fullName>FieloEE__Manual</fullName>
    <active>true</active>
    <description>The administrator adds manually members to a segment.</description>
    <label>Manual</label>
</RecordType>