force-app/main/default/objects/FieloEE__RedemptionRule__c/listViews/FieloEE__All_Segments.listView-meta.xml
<ListView>
    <fullName>FieloEE__All_Segments</fullName>
    <columns>NAME</columns>
    <columns>FieloEE__isActive__c</columns>
    <columns>FieloEE__Description__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Segments</label>
    <language>en_US</language>
</ListView>